<resources>
    <string name="app_name">My Contact List</string>
    <string name="button_to_display_the_list_of_contacts">Display a list of contacts</string>
    <string name="button_to_display_the_map">Display the Map</string>
    <string name="button_to_display_the_settings">Display the Settings</string>
    <string name="buttonToggleOffText">OFF</string>
    <string name="on">ON</string>
    <string name="buttonSaveText">Save</string>
    <string name="contact">Contact:</string>
    <string name="contact_hint">Contact</string>
    <string name="address">Address:</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zipcode_hint">Zip Code</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="e_mail_address">E-Mail Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="selectdate">Select Date</string>
    <string name="sort_contacts_by">Sort Contacts By:</string>
    <string name="name">Name</string>
    <string name="city">City</string>
    <string name="birthday_hint">Birthday</string>
    <string name="sort_order">Sort Order:</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="delete">Delete:</string>
    <string name="new1">New</string>
    <string name="textview">TextView</string>
    <string name="city2">City</string>
    <string name="birthday2">Birthday</string>
    <string name="color2">Gray</string>
    <string name="color3">Purple</string>
    <string name="color4">Green</string>
    <string name="color1">Blue</string>
    <string name="color">Color</string>
    <string name="sort_by_name_ascending">Sort By Name Ascending</string>
    <string name="sort_by_city_descending">Sort By City Descending</string>
    <string name="_240_w_murdock_ave">240 W Murdock Ave</string>
    <string name="enter_street_address">Enter Street Address</string>
    <string name="oshkosh">Oshkosh</string>
    <string name="wi">WI</string>
    <string name="state">State</string>
    <string name="_54901">54901</string>
    <string name="zipcode">Zipcode</string>
    <string name="get_coordinates">Get Coordinates</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="none">None</string>
    <string name="_100">100%</string>
    <string name="normal">Normal</string>
    <string name="satellite">Satellite</string>
    <string name="wnw">WNW</string>
</resources>